writed: Writed jwt authentication
