# app/Models/User.php
@@ -46,6 +46,8 @@ class User extends JWTAuthorizeModel
      */
     protected $casts = [
         'email_verified_at' => 'datetime',
+        'created_at' => 'datetime:d-m-Y H:i:s',
+        'updated_at' => 'datetime:d-m-Y H:i:s',
     ];
 
     /**
