# routes/api.php
@@ -13,11 +13,15 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-//Route::middleware('auth:api')->get('/user', function (Request $request) {
-//    return $request->user();
-//});
+Route::group(['prefix' => 'auth'], static function (): void {
+    Route::post('/register', 'AuthController@register');
+    Route::post('/login', 'AuthController@login');
+    Route::post('/refresh', 'AuthController@refresh');
+    Route::post('/logout', 'AuthController@logout');
+});
 
-Route::apiResource('/users', 'UserController');
-Route::post('/users/{id}/avatars', 'UserAvatarController');
-
-
+Route::group(['middleware' => 'auth:api'], static function (): void {
+    Route::get('/profile', 'ProfileController@profile');
+    Route::apiResource('/users', 'UserController');
+    Route::post('/users/{id}/avatars', 'UserAvatarController');
+});
